# receipt_org

./: .gitignore  Dockerfile  Procfile  README.md  analyze_data.py  app.py  app_streamlit.py  company_mention_counter.py  create_table.py  extract_thread.py  fly.toml  generate_test_receipts.py  historical_data_fetcher.py  proxy_reddit_fetcher.py  pyproject.toml  reddit_fetcher.py  requirements.txt  sentiment_analyzer.py  simple_suumo_crawler.py  suumo_crawler.py  suumo_property_20250106_073311.csv  test_processor.py  test_simple_crawler.py  uber_llm_ocr.py  uber_oai.py  uber_ocr.py  uber_ocr_en.py  uber_ocr_oai.py  verify_pdf.py
static/css/: calendar.css  style.css
static/js/: calendar.js  upload.js
templates/: calendar.html  index.html
